--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
+body {
+    background-color: lightblue;
+    text-align: center;
+}
+
+main {
+    margin-right: 20px;
+    margin-left: 20px;
+    background-color: white;
+}
+
 h1 {
     text-align: center;
     color: cornflowerblue;
